--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "zvue",
+  "name": "@zhangyueqingyun_/zvue",
   "version": "1.0.0",
   "description": "a vue projects creator.",
   "main": "index.js",
+  "bin": {
+    "zvue": "bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
