--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/zhangyueqingyun/zvue/issues"
   },
-  "homepage": "https://github.com/zhangyueqingyun/zvue#readme"
+  "homepage": "https://github.com/zhangyueqingyun/zvue#readme",
+  "dependencies": {
+    "chalk": "^5.2.0",
+    "commander": "^10.0.0",
+    "download-git-repo": "^3.0.2",
+    "handlebars": "^4.7.7",
+    "inquirer": "^9.1.4",
+    "log-symbols": "^5.1.0",
+    "ora": "^6.1.2"
+  }
 }
